Fix night sheet icon misalignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -750,7 +750,7 @@ img.imported-icon {
           width: 3rem;
           height: 3rem;
           object-fit: contain;
-          justify-self: center;
+          justify-self: right;
         }
       }
     }
